--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row" id="content">
                 <div class="card">
                     <h3>HTML</h3>
                 </div>
@@ -66,7 +66,7 @@
             </form>
         </div>
 
-        <div class="modal">
+        <div class="modal" id="modal">
             <h2>JavaScript</h2>
             <p>
                 Lorem Ipsum - это текст-"рыба", часто используемый в печати и
@@ -86,6 +86,8 @@
                 <label for="done">Выучил</label>
             </div>
         </div>
-        <div class="modal-backdrop"></div>
+        <div class="modal-backdrop" id="backdrop"></div>
+
+        <script src="app.js"></script>
     </body>
     </html>
